$NetBSD: CHANGES-2016,v 1.3598 2016/08/30 12:39:05 ryoon Exp $

Changes to the packages collection and infrastructure in 2016:

	Updated textproc/expat to 2.1.0nb2 [ryoon 2016-01-01]
	Updated devel/p5-autobox-Core to 1.30 [wen 2016-01-01]
	Updated devel/gmake to 4.1nb2 [ryoon 2016-01-01]
	Updated devel/p5-Cache-FastMmap to 1.43 [wen 2016-01-01]
	Updated devel/p5-CPAN-Meta-Requirements to 2.140 [wen 2016-01-01]
	Added math/R-SparseM version 1.7 [wen 2016-01-01]
	Added math/R-MatrixModels version 0.4-1 [wen 2016-01-01]
	Added math/R-quantreg version 5.19 [wen 2016-01-01]
	Updated math/R-e1071 to 1.6.7 [wen 2016-01-01]
	Updated math/R-classInt to 0.1.23 [wen 2016-01-01]
	Added textproc/R-stringi version 1.0.1 [wen 2016-01-01]
	Added devel/R-magrittr version 1.5 [wen 2016-01-01]
	Updated textproc/R-stringr to 1.0.0 [wen 2016-01-01]
	Updated sysutils/rsyslog to 8.15.0 [fhajny 2016-01-01]
	Added textproc/libfastjson version 0.99.0 [fhajny 2016-01-01]
	Updated security/sudo to 1.8.5 [spz 2016-01-01]
	Updated misc/ansiweather to 1.06 [kamil 2016-01-02]
	Updated time/py-vdirsyncer to 0.7.5 [wiz 2016-01-02]
	Added net/py-Socks version 1.5.6 [wiz 2016-01-02]
	Updated www/py-urllib3 to 1.14 [wiz 2016-01-02]
	Added www/py-httpbin version 0.4.0 [wiz 2016-01-02]
	Added www/py-test-httpbin version 0.2.0 [wiz 2016-01-02]
	Updated devel/py-requests to 2.9.1 [wiz 2016-01-02]
	Added devel/py-nose-exclude version 0.4.1 [wiz 2016-01-02]
	Updated net/wireshark to 1.12.9 [ryoon 2016-01-02]
	Updated databases/p5-DBM-Deep to 2.0013 [wen 2016-01-02]
	Updated devel/p5-Proc-Daemon to 0.23 [wen 2016-01-02]
	Updated emulators/mame to 0.169 [wiz 2016-01-02]
	Added net/wireshark2 version 2.0.1 [ryoon 2016-01-02]
	Updated graphics/fotoxx to 16.01 [ryoon 2016-01-03]
	Added time/ruby-tzinfo03 version 0.3.46 [taca 2016-01-03]
	Updated databases/ruby-activerecord32 to 3.2.22nb1 [taca 2016-01-03]
	Updated time/ruby-tzinfo to 1.2.2 [taca 2016-01-03]
	Updated archivers/ruby-xz to 0.2.3 [taca 2016-01-03]