@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2016,v 1.3598 2016/08/30 12:39:05 ryoon Exp $
+$NetBSD: CHANGES-2016,v 1.3599 2016/08/30 12:47:48 manu Exp $
 
 Changes to the packages collection and infrastructure in 2016:
 
@@ -5142,3 +5142,4 @@ Changes to the packages collection and infrastructure in 2016:
 	Updated cad/qcad-partlibrary to 20160819 [plunky 2016-08-30]
 	Added www/ap2-encoding 20021209 [manu 2016-08-30]
 	Updated devel/mantis to 1.3.1 [ryoon 2016-08-30]
+	Added www/ap2-mkdir 0.3 [manu 2016-08-30]
